--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -35,7 +35,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/background.png) no-repeat center center;
     background-size: cover;
 }
 
@@ -170,6 +170,6 @@ p.copyright {
 }
 
 .section-organizadores{
-    background-color: #3B8DBD;
+    background-color: #00AFBC;
     color: #fff;
 }
